# AWS_DBT_Snowflake

./: .env.example  .gitignore  .user.yml  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  start_airflow.sh
.github/workflows/: dbt_ci_cd.yml
airflow/: airflow.db  airflow.db-shm  airflow.db-wal  simple_auth_manager_passwords.json.generated
airflow/dags/: elt_pipeline_dag.py
docs/: DATA_TRANSFORMATION_JOURNEY.md  EXECUTION_GUIDE.md  FINAL_WALKTHROUGH.md  PROJECT_WALKTHROUGH.md  WALKTHROUGH.md  architecture.md  aws_setup.md  ci_cd.md  cost_optimization.md  data_flow.md  data_modeling.md  data_quality.md  glossary.md  ingestion.md  observability.md  onboarding.md  orchestration.md  runbook.md  security.md  transformation.md
macros/: add_audit_columns.sql  generate_surrogate_key.sql  utils.sql
models/marts/: _marts__schema.yml  dim_customers.sql  dim_products.sql  fct_orders.sql
models/staging/: _stg_raw__sources.yml  sources.yml  stg_raw__customers.sql  stg_raw__order_items.sql  stg_raw__orders.sql  stg_raw__products.sql
sample_data/: README.md  customers.json  order_items.csv  orders.csv  products.csv
seeds/: country_codes.csv  product_categories.csv
snapshots/: snap_customers.sql
snowflake/: 00_rbac_setup.sql  01_file_formats_and_stages.sql  02_metadata_and_control_tables.sql  03_dynamic_schema_procedure.sql  04_streams_and_tasks.sql  05_data_masking.sql
tests/: assert_no_duplicate_order_keys.sql  assert_orders_have_valid_customers.sql  assert_orders_revenue_matches_line_items.sql
(+3 files in other folders)
